nginx/svc-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: default
spec:
  ports:
  - name: http-port
    port: 80
  selector:
    app: nginx
